<resources>
    <string name="app_name">Okoa Loan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>
    <string name="copyright">Copyright \u00a9 Okoa Loan Kenya Ltd 2018.</string>
    <string name="spinnerPurpose">Purpose</string>
    <string name="spinnerSecurity">Security</string>
    <string name="spinnerCode">Country code</string>

    <!--Account fragment -->
    <string name="profileButton">PROFILE</string>
    <string name="pay">PAY</string>
    <string name="history">HISTORY</string>
    <string name="Text0">Info: </string>
    <string name="Text1">1. Failure to repay loan on time could lead to future denial of loans.</string>
    <string name="Text2">2. Borrow from as little as Ksh. 100 to Ksh. 10,000.</string>
    <string name="Text3">3. Our interest rate is 5% per month.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="nav_item_activity_titles">
        <item>Okoa Loan</item>
        <item>Account</item>
        <item>Notifications</item>
        <item>FAQs</item>
        <item>Settings</item>
    </string-array>

</resources>
